Implement Classifier Per Queue

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
+aws.sqs.info-queue=https://sqs.us-east-2.amazonaws.com/782630712562/informative-signals-queue
+aws.sqs.emergency-queue=https://sqs.us-east-2.amazonaws.com/782630712562/emergency-signals-queue
+aws.sqs.anomalous-queue=https://sqs.us-east-2.amazonaws.com/782630712562/anomalous-signals-queue
 
