--- a/build.gradle
+++ b/build.gradle
@@ -20,10 +20,16 @@ repositories {
 }
 
 dependencies {
-	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+	//implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'com.fasterxml.jackson.module:jackson-module-kotlin'
 	implementation 'org.jetbrains.kotlin:kotlin-reflect'
+	implementation platform("io.awspring.cloud:spring-cloud-aws-dependencies:3.1.0")
+	// Replace the following with the starter dependencies of specific modules you wish to use
+	implementation 'io.awspring.cloud:spring-cloud-aws-starter-sqs'
+
+
+
 	runtimeOnly 'org.postgresql:postgresql'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
