--- a/build.gradle
+++ b/build.gradle
@@ -27,10 +27,11 @@ dependencies {
 	implementation platform("io.awspring.cloud:spring-cloud-aws-dependencies:3.1.0")
 	// Replace the following with the starter dependencies of specific modules you wish to use
 	implementation 'io.awspring.cloud:spring-cloud-aws-starter-sqs'
+	implementation 'org.springframework.boot:spring-boot-starter-actuator'
 
 
 
-	runtimeOnly 'org.postgresql:postgresql'
+	//runtimeOnly 'org.postgresql:postgresql'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
